Error screen for small devices and more responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,18 @@
     <div id="app">
         <index></index>
     </div>
+
+    <div id="small-screen">
+        <div class="sml-content">
+            <div class="sml-logo-container">
+                <img src='logo.png' class="sml-logo" alt="raceview logo">
+            </div>
+
+            <div class="sml-text">
+                This screen size is not supported by the Raceview website.
+            </div>
+        </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
